feat: MVP structure for publishing